<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#eaeaea"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textViewSizesHeader"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_weight="0"
        android:background="@color/header_bg"
        android:gravity="center"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:weightSum="5"
        android:background="@android:color/transparent"
        android:orientation="horizontal" >
       
     

        <ImageButton
            android:id="@+id/small_brush"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:padding="0dp"
             android:scaleType="fitCenter"
            android:background="@android:color/transparent"
            android:contentDescription="@string/sml"
            android:src="@drawable/brush_10" />

        <ImageButton
            android:id="@+id/small_brush_12"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
             android:scaleType="fitCenter"
            android:background="@android:color/transparent"
            android:contentDescription="@string/med"
            android:src="@drawable/brush_12" />

        <ImageButton
            android:id="@+id/small_brush_14"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
             android:scaleType="fitCenter"
            android:background="@android:color/transparent"
            android:contentDescription="@string/lrg"
            android:src="@drawable/brush_14" />
          <ImageButton
            android:id="@+id/small_brush_16"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
             android:scaleType="fitCenter"
            android:background="@android:color/transparent"
            android:contentDescription="@string/lrg"
            android:src="@drawable/brush_16" />
            <ImageButton
            android:id="@+id/small_brush_18"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
             android:scaleType="fitCenter"
            android:background="@android:color/transparent"
            android:contentDescription="@string/lrg"
            android:src="@drawable/brush_18" />
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:weightSum="5"
        android:background="@android:color/transparent"
        android:orientation="horizontal" >
       
    
        <ImageButton
            android:id="@+id/medium_brush"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
             android:scaleType="fitCenter"
            android:background="@android:color/transparent"
            android:contentDescription="@string/med"
            android:src="@drawable/brush_20" />
        
           <ImageButton
            android:id="@+id/medium_brush_22"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
             android:scaleType="fitCenter"
            android:background="@android:color/transparent"
            android:contentDescription="@string/med"
            android:src="@drawable/brush_22" />
              <ImageButton
            android:id="@+id/medium_brush_24"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
             android:scaleType="fitCenter"
            android:background="@android:color/transparent"
            android:contentDescription="@string/med"
            android:src="@drawable/brush_24" />
                 <ImageButton
            android:id="@+id/medium_brush_26"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
             android:scaleType="fitCenter"
            android:background="@android:color/transparent"
            android:contentDescription="@string/med"
            android:src="@drawable/brush_26" />
                    <ImageButton
            android:id="@+id/medium_brush_28"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
             android:scaleType="fitCenter"
            android:background="@android:color/transparent"
            android:contentDescription="@string/med"
            android:src="@drawable/brush_28" />


    </LinearLayout>
   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:weightSum="5"
        android:background="@android:color/transparent"
        android:orientation="horizontal" >
       
        <ImageButton
            android:id="@+id/large_brush"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
             android:scaleType="fitCenter"
            android:background="@android:color/transparent"
            android:contentDescription="@string/lrg"
            android:src="@drawable/brush_30" />
        
                <ImageButton
            android:id="@+id/large_brush_32"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
             android:scaleType="fitCenter"
            android:background="@android:color/transparent"
            android:contentDescription="@string/lrg"
            android:src="@drawable/brush_32" />
                        <ImageButton
            android:id="@+id/large_brush_34"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:background="@android:color/transparent"
            android:contentDescription="@string/lrg"
            android:src="@drawable/brush_34" />
                                <ImageButton
            android:id="@+id/large_brush_36"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:background="@android:color/transparent"
            android:contentDescription="@string/lrg"
            android:src="@drawable/brush_36" />
                                        <ImageButton
            android:id="@+id/large_brush_38"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:background="@android:color/transparent"
            android:contentDescription="@string/lrg"
            android:src="@drawable/brush_38" />
        
    </LinearLayout>

   <View
       android:id="@+id/view1"
       android:layout_width="wrap_content"
       android:layout_height="5dp"
       android:layout_weight="0" />

</LinearLayout>